style the side menu margin to prevent icon wrap

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -138,7 +138,7 @@ input{
 .well-sm{
 	border-radius: 0px;
 	border-width:0px;
-	padding:20px;
+	padding:30px 7px;
     box-shadow: 0;
     background-color: #f5f5f5;
 }
